fix(ui): map is more clean and readable

--- a/src/app/components/current-map/current-map.component.scss
+++ b/src/app/components/current-map/current-map.component.scss
@@ -3,8 +3,3 @@
   width: 100%;
   height: 100%;
 }
-
-canvas {
-  width: 100%;
-  height: 100%;
-}
